grafana-istio-ingress-gateway/httpbin-virtualservice.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: grafana
spec:
  hosts:
  - "grafana.istio-ingress.eneko.k8s.us-west-2.hcom-sandbox-aws.aws.hcom"
  gateways:
  - grafana-gateway
  http:
  - match:
    - uri:
        prefix: /
    route:
    - destination:
        port:
          number: 80
        host: mantle-grafana.mantle.svc.cluster.local
